--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css"
     />
-    <title>Thanks a lot</title>
+    <title>Thanks a lot AIIMS</title>
   </head>
 
   <body>
