--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </h5>
 
           <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-            Thanks a lot to AIIMS all members who helped me. Doesn't matter what is your job role there. But everybody who helped me and did nice to me I only want to say you one thing <div class="font-sans mt-4 rounded-lg text-center text-white p-2 font-bold text-2xl bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500  hover:animate-ping"> THANK YOU !!!</div>
+            Thanks a lot to AIIMS all members who helped me. Doesn't matter what is your job role there. But everybody who helped me and did nice to me I only want to say you one thing <div class="font-sans mt-4 rounded-lg text-center text-white p-2 font-bold text-2xl bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 "> THANK YOU !!!</div>
           </p>
         </div>
       </div>
